kubeyaml/SPA-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-deployment
  labels: 
     app: covid-app
spec:
  replicas: 3
  template:
   selector:
     matchLabels: 
       app: covid-app
     template:
        metadata:
           labels:
            app: covid-app
spec:
containers:
- name: nginx
image: elminino/covid-front:0.0.8
ports:
- containerPort: 80
