kubeyaml/SPA-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service-label-key: service-covid
  name: service-covid
spec:
  type: LoadBalancer
  ports:
  - name: service-port-covid
    port: 80
    protocol: TCP
  selector:
    deployment-label-key: deployment-label-covid
