kubeyaml/covid-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: covid-service-ingress
spec:
  rules:
  - host: www.covidworldstate.com
    http:
      paths:
      - backend:
          serviceName: covid-deployment
          servicePort: 80
