kubeyaml/defaultback.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  backend:
     serviceName: covid-app
     servicePort: 80
